Fixed Period Bug
Fixed style bug where there was an extra space between “2016” and the
period in the copyright thingy.

--- a/styles.scss
+++ b/styles.scss
@@ -61,7 +61,7 @@ h1{
 	line-height: 50px;
 	height:50px;
 	font-size: 2.25em;
-	margin:150px 0 40px 0;
+	margin:0 0 40px 0;
 	@include ease-in-out(.2s);
 }
 
@@ -142,6 +142,10 @@ a.magenta:focus{
 	max-width:640px;
 	margin:auto;
 	padding-bottom: 50px;
+
+	h1{
+		margin-top:150px;
+	}
 }
 
 /*-----Things for the Big Picture That Starts Most Pages (Coming Soon)-----*/
@@ -162,6 +166,7 @@ section{
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
+	margin-top: 100px;
 }
 
 .imageSection{
@@ -224,7 +229,6 @@ section{
 /*-----About Page Things-----*/
 
 .about{
-	padding: 100px 0 0 0;
 
 	h1{
 		margin-top: 0px;
